@@ -1,6 +1,8 @@
 2017-02-07  Arndt Kaiser
 	* improve error handling of failed async-reads
 	* returned GErrors should be freed (memory leaks fixed)
+	* don't start new async-reads while there are pending
+	  async-reads during pinging the device
 
 2017-02-01  Arndt Kaiser
 	* prevent unintentional deletion of the pppd-pidfile in
